--- a/css/style.css
+++ b/css/style.css
@@ -406,3 +406,49 @@ footer{
     margin-top: 10px;
     height: 250px;
 }
+.swiper
+{
+    font-family: cursive;
+    font-size: 14px;
+    color: #000;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: rgb(236, 225, 225);
+
+}
+.swiper-container{
+    width: 100%;
+    padding-top: 100px;
+    padding-bottom: 50px;
+}
+.swiper-slide
+{
+    background-position: center;
+    background-size: cover;
+    width: 300px;
+    height: 380px;
+    background: #fff;
+    -webkit-box-reflect: below 1px linear-gradient(transparent,transparent,#0006);
+}
+.swiper-slide img {
+    display: block;
+    width: 100%;
+}
+.swiper-slide .details{
+    box-sizing: border-box;
+    font-size: 20px;
+    padding: 10px;
+
+}
+.swiper-slide .details h3{
+    margin: 0%;
+    padding: 0%;
+    font-size: 20px;
+    text-align: center;
+    line-height: 30px;
+}
+.swiper-slide .details h3 span{
+    font-size: 16px;
+    color: #f44336;
+}
